# ocaml

./: .gitignore  .ocamlformat  LICENSE
ocaml-org-problems/: 1-working-with-lists.ml  README.md
ocaml_org_problems/: README.md  dune-project  ocaml_org_problems.opam
ocaml_org_problems/lib/: dune  m1_working_with_lists.ml
okasaki/: README.md  dune-project  okasaki.opam
okasaki/lib/: dune  okasaki.ml
