(lang dune 3.4)

(name okasaki)

(generate_opam_files true)

(source
 (github pavlov99/ocaml))

(authors "Kirill Pavlov")

(maintainers "Kirill Pavlov")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name okasaki)
 (synopsis "Implementation of purely functional data structures")
 (description "Implementation of purely functional data structures following the book by Chris Okasaki")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
